OmegaGo/tests/Core/OmegaGo.Client.Core.Tests/Sgf/Parsing/SampleSgfs/Invalid/()count/( missing at beginning.sgf
;GM[1]SZ[9]AB[ba][bc][cb]AW[db][dc][cd][bd];B[ab]C[RIGHT])
